--- a/FragmentListExample/app/src/main/res/layout/activity_main.xml
+++ b/FragmentListExample/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/fragment"
         android:name="com.example.mohamedahmed.fragmentlistexample.MainActivityFragment"
-        tools:layout="@layout/fragment_main"
+        tools:layout="@layout/fragment_container_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
     />
